redactable/tests/ui/slog_redacted_display_raw_string_rejected.stderr
error[E0277]: the trait bound `String: SlogRedactedDisplayExt` is not satisfied
  --> tests/ui/slog_redacted_display_raw_string_rejected.rs:15:23
   |
15 |     require_certified(&password);
   |     ----------------- ^^^^^^^^^ the trait `DeclaredRedactable` is not implemented for `String`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `DeclaredRedactable`:
             Arc<T>
             BTreeMap<K, V>
             BTreeSet<T>
             Box<T>
             Cell<T>
             HashMap<K, V, S>
             HashSet<T, S>
             NotSensitiveValue<T>
           and $N others
   = note: required for `String` to implement `SlogRedactedDisplayExt`
note: required by a bound in `require_certified`
  --> tests/ui/slog_redacted_display_raw_string_rejected.rs:11:25
   |
11 | fn require_certified<T: SlogRedactedDisplayExt>(_: &T) {}
   |                         ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `require_certified`
